--- a/app/views/welcome/game.html.haml
+++ b/app/views/welcome/game.html.haml
@@ -65,24 +65,25 @@
       var array_img = new Array();
 
       for (i=0; i<children.length; i++) {
-      array_img[i] = $("#"+child.attr("id")+" img").attr("src");
-      child = child.next();
+        array_img[i] = $("#"+child.attr("id")+" img").attr("src");
+        child = child.next();
       }
 
       var child = $("#boxcard div:first-child");
+      console.log('here');
 
       for (z=0; z<children.length; z++) {
-      randIndex = randomFromTo(0, array_img.length - 1);
+        randIndex = randomFromTo(0, array_img.length - 1);
 
-      // set new image
-      $("#"+child.attr("id")+" img").attr("src", array_img[randIndex]);
-      array_img.splice(randIndex, 1);
+        // set new image
+        $("#"+child.attr("id")+" img").attr("src", array_img[randIndex]);
+        array_img.splice(randIndex, 1);
 
-      child = child.next();
+        child = child.next();
       }
-      }
+    }
 
-      function resetGame() {
+    function resetGame() {
       shuffle();
       $("img").hide();
       $("img").removeClass("opacity");
@@ -93,9 +94,9 @@
       imgopened = "";
       found = 0;
       return false;
-      }
+    }
 
-      $(document).ready(function() {
+    $(document).ready(function() {
       $("img").hide();
       $("#boxcard div").click(openCard);
 
@@ -103,52 +104,52 @@
 
       function openCard() {
 
-      id = $(this).attr("id");
+        id = $(this).attr("id");
 
-      if ($("#"+id+" img").is(":hidden")) {
-      $("#boxcard div").unbind("click", openCard);
+        if ($("#"+id+" img").is(":hidden")) {
+          $("#boxcard div").unbind("click", openCard);
 
-      $("#"+id+" img").slideDown('fast');
+          $("#"+id+" img").slideDown('fast');
 
-      if (imgopened == "") {
-      boxopened = id;
-      imgopened = $("#"+id+" img").attr("src");
-      setTimeout(function() {
-      $("#boxcard div").bind("click", openCard)
-      }, 300);
-      } else {
-      currentopened = $("#"+id+" img").attr("src");
-      if (imgopened != currentopened) {
-      // close again
-      setTimeout(function() {
-      $("#"+id+" img").slideUp('fast');
-      $("#"+boxopened+" img").slideUp('fast');
-      boxopened = "";
-      imgopened = "";
-      }, 400);
-      } else {
-      // found
-      $("#"+id+" img").addClass("opacity");
-      $("#"+boxopened+" img").addClass("opacity");
-      found++;
-      boxopened = "";
-      imgopened = "";
+          if (imgopened == "") {
+            boxopened = id;
+            imgopened = $("#"+id+" img").attr("src");
+            setTimeout(function() {
+              $("#boxcard div").bind("click", openCard)
+            }, 300);
+          } 
+          else {
+            currentopened = $("#"+id+" img").attr("src");
+            if (imgopened != currentopened) {
+              // close again
+              setTimeout(function() {
+                $("#"+id+" img").slideUp('fast');
+                $("#"+boxopened+" img").slideUp('fast');
+                boxopened = "";
+                imgopened = "";
+              }, 400);
+            } 
+            else {
+              // found
+              $("#"+id+" img").addClass("opacity");
+              $("#"+boxopened+" img").addClass("opacity");
+              found++;
+              boxopened = "";
+              imgopened = "";
+            }
+
+            setTimeout(function() { $("#boxcard div").bind("click", openCard) }, 400);
+          }
+
+          count++;
+          $("#count").html("" + count);
+
+          if (found == 10) {
+            msg = '<span id="msg">Congrats ! You found all of us with </span>';
+            $("span.link").prepend(msg);
+          }
+        }
       }
-
-      setTimeout(function() {
-      $("#boxcard div").bind("click", openCard)
-      }, 400);
-      }
-
-      count++;
-      $("#count").html("" + count);
-
-      if (found == 10) {
-      msg = '<span id="msg">Congrats ! You found all of us with </span>';
-      $("span.link").prepend(msg);
-      }
-      }
-      }
-      });
+    });
 
 
