--- a/app/assets/stylesheets/welcome.css
+++ b/app/assets/stylesheets/welcome.css
@@ -4,5 +4,8 @@
  * the top of the compiled file, but it's generally better to create a new file per style scope.
  *= require_tree ./bootstrap
  *= require_self
- *= require_tree ./application
+ *= require_tree ./welcome
 */
+
+
+
