Added form and show haml temlplates

--- a/app/views/meals/show.html.haml
+++ b/app/views/meals/show.html.haml
@@ -4,6 +4,6 @@
       %li= link_to 'Edit', edit_meal_path(@meal)
       %li= link_to 'Back', meals_path
       %li.divider
-      %li= link_to "Delete", meal_path(@item), :method => :delete, :confirm => "You sure?"
+      %li= link_to "Delete", meal_path(@meal), :method => :delete, :confirm => "You sure?"
   .span11
     =@meal.description
