--- a/lib/templates/haml/scaffold/index.html.haml
+++ b/lib/templates/haml/scaffold/index.html.haml
@@ -2,13 +2,17 @@
   .span1
     =link_to "New <%= class_name %>", new_<%= singular_name %>_path
   .span11
-    %table.table.table-bordered.striped
-      %thead
-        %tr
-          <% for attribute in attributes %>%th <%= attribute.name %>
-          <% end %>
-      %tbody
-        =render(@<%= plural_name %>) || raw("You have not added any <%= plural_name %>.<br/>Add a new one on the left.")
+    -if @<%= plural_name %>.any?
+      %table.table.table-bordered.striped
+        %thead
+          %tr
+<% for attribute in attributes -%>
+            %th <%= attribute.human_name %>
+<% end -%>
+        %tbody
+          =render(@<%= plural_name %>)
+    -else
+      =raw("You have not added any <%= plural_name %>.<br/>Add a new one on the left.")
 
 =content_for :javascript do
   :javascript
