Can generate invitations; started passcode login

--- a/app/assets/stylesheets/application/wedding.scss
+++ b/app/assets/stylesheets/application/wedding.scss
@@ -6,5 +6,13 @@
   font-family: 'Delius', serif;
 }
 
+.clear {
+  clear:both;
+}
+
+.table tbody tr:hover {
+  cursor:pointer;
+}
+
 #main_content {
 }
