--- a/app/views/invitations/_invitation.html.haml
+++ b/app/views/invitations/_invitation.html.haml
@@ -1,3 +1,4 @@
 %tr{ :data => { 'invitation-id' => invitation.id } }
   %td= invitation.guest.name if invitation.guest
   %td= invitation.passcode
+  %td= link_to 'RSVP', rsvp_path(invitation.id_hash)
