Added RSVP, Invitations and Meals; Plus redeisgn

--- a/app/assets/stylesheets/partials/_fonts.scss
+++ b/app/assets/stylesheets/partials/_fonts.scss
@@ -8,3 +8,11 @@
 .font-delius {
   font-family: 'Delius', serif;
 }
+
+.font-alegreya {
+  font-family: 'Alegreya SC', serif;
+}
+
+.font-italianno {
+  font-family: 'Italianno', serif;
+}
