--- a/app/views/layouts/welcome.html.haml
+++ b/app/views/layouts/welcome.html.haml
@@ -12,6 +12,9 @@
     = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Montez'
     = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Delius'
     = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Great+Vibes'
+    = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Alegreya+SC'
+    = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Italianno'
+    = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Mr+Bedfort'
 
     =yield :header
   %body
