--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,7 +1,7 @@
 .row-fluid
   .span4=image_tag 'standing.jpg'
   .span8
-    .hero-unit.black.font-delius.center{ :style => 'background:white;'}
+    .hero-unit.black.font-montez.center{ :style => 'background:white;'}
       %h1 
         Hayley Facer
         %br
@@ -13,4 +13,3 @@
       %p
         %br
         %h3 Saturday July 21st, 2012
-      %p=link_to 'Get the Deets...', info_path, { :class => 'btn  btn-large' }
