--- a/app/assets/stylesheets/welcome/rsvp.css.scss
+++ b/app/assets/stylesheets/welcome/rsvp.css.scss
@@ -1,7 +1,24 @@
+@import '../partials/colors';
+@import '../partials/standards';
+@import '../partials/fonts';
+
+.rsvp-intro {
+  color:$malibu;
+  font-size:2em;
+  line-height:1em;
+  padding:0 0 2em 0;
+
+  .names {
+    color:#000;
+    font-size:2em;
+    line-height:1.2em;
+  }
+}
 .rsvp-row {
   .control-group {
+    background-color:#fff;
     &:hover {
-      background-color:snow;
+      background-color:$malibu;
     }
   }
 }
