--- a/app/views/invitations/index.html.haml
+++ b/app/views/invitations/index.html.haml
@@ -3,6 +3,9 @@
     %ul.nav.nav-pills.nav-stacked
       %li=link_to 'Generate from Guests', choose_invitations_path
       %li=link_to "New Invitation", new_invitation_path
+      %Li
+        %hr
+      %li=link_to "Print Invitaion Inserts", inserts_invitations_path
   .span11
     -if @invitations.any?
       %table.table.table-bordered.striped
@@ -10,7 +13,6 @@
           %tr
             %th Guest
             %th Passcode
-            %th RSVP Link
         %tbody
           =render(@invitations)
     -else
