Added page break for inviation inserts

--- a/app/assets/stylesheets/invitation_inserts.css.scss
+++ b/app/assets/stylesheets/invitation_inserts.css.scss
@@ -23,6 +23,7 @@ body {
   border:1px solid #000;
   padding:12px 0 0 0.2in;
   font-size:12pt;
+  page-break-before: always;
 
   h1 {
     font-size:30pt;
