Better delete for Guest; still broken

--- a/app/views/guests/show.html.haml
+++ b/app/views/guests/show.html.haml
@@ -15,4 +15,5 @@
   = @guest.and_guest ? 'Yes' : 'No'
 
 =link_to "Edit", edit_guest_path(@guest)
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 =link_to "Delete", guest_path(@guest), :confirm => "Are you sure?", :method => 'delete'
