--- a/app/views/attendees/edit.html.haml
+++ b/app/views/attendees/edit.html.haml
@@ -1,7 +1,2 @@
-%h1 Editing attendee
-
+%h1 Editing #{@attendee.name}
 = render 'form'
-
-= link_to 'Show', @attendee
-\|
-= link_to 'Back', attendees_path
