--- a/app/views/attendees/show.html.haml
+++ b/app/views/attendees/show.html.haml
@@ -2,23 +2,23 @@
   .span1
     %ul.nav.nav-list
       %li= link_to 'Edit', edit_attendee_path(@attendee)
-      %li= link_to 'Back', attendees_path
+      %li= link_to 'List', attendees_path
       %li.divider
       %li= link_to "Delete", attendee_path(@attendee), :method => :delete, :confirm => "You sure?"
   .span11
     %dl
       %dt
-        Guest
-      %dd
-        =@attendee.guest_id
-    %dl
-      %dt
-        Name
+        Attendee Name
       %dd
         =@attendee.name
     %dl
       %dt
+        Guest Name
+      %dd
+        =@attendee.guest_name
+    %dl
+      %dt
         Meal
       %dd
-        =@attendee.meal_id
+        =@attendee.meal_title
 
