Locked down controllers, grey border on yellow header

--- a/app/assets/stylesheets/partials/_colors.scss
+++ b/app/assets/stylesheets/partials/_colors.scss
@@ -8,7 +8,7 @@ $orange:#ff7227;
 $pink:#ff72ff;
 $green:#72ff47;
 
-.yellow { color:$yellow; text-shadow:-1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; }
+.yellow { color:$yellow; text-shadow:-1px 0 #555, 0 1px #555, 1px 0 #555, 0 -1px #555; }
 .magenta { color:$magenta; }
 .purple { color:$purple; }
 .orange { color:$orange; }
