--- a/app/views/attendees/_attendee.html.haml
+++ b/app/views/attendees/_attendee.html.haml
@@ -1,5 +1,5 @@
 %tr{ :data => { 'attendee-id' => attendee.id}}
   %td= attendee.name
-  %td= link_to(attendee.guest_name, guest_path(attendee.invitation.guest)) if attendee.guest_name
+  %td= link_to(attendee.invitation.guest_name_with_remainaing_count, guest_path(attendee.invitation.guest)) if attendee.guest_name
   %td=attendee.meal_title
     
