Name text box is first tab index on attendee form

--- a/app/views/attendees/_form.html.haml
+++ b/app/views/attendees/_form.html.haml
@@ -11,7 +11,7 @@
       %td
         = f.label :name
       %td
-        = f.text_field :name
+        = f.text_field :name, tabindex: 1
     %tr
       %tr
       %td
