--- a/app/views/attendees/_attendee.html.haml
+++ b/app/views/attendees/_attendee.html.haml
@@ -5,4 +5,5 @@
       =attendee.invitation.guest_name_with_remainaing_count 
       (#{attendee.guest_friendly_name})
   %td=attendee.meal_title
+  %td=attendee.note
     
