--- a/app/views/attendees/_form.html.haml
+++ b/app/views/attendees/_form.html.haml
@@ -24,6 +24,11 @@
         = f.label :meal_id
       %td
         = f.select :meal_id, options_from_collection_for_select(Meal.all, :id, 'title', :meal_id), {}, tabindex: 3
+    %tr
+      %td
+        = f.label :note
+      %td
+        = f.text_area :note, rows: 3
         
 
     %tr
