added seating chart

--- a/app/assets/stylesheets/application/wedding.scss
+++ b/app/assets/stylesheets/application/wedding.scss
@@ -16,3 +16,14 @@
 
 #main_content {
 }
+
+ul.connectedSortable {
+  background:$malibu;
+  min-height:20px;
+  padding:5px 0;
+
+  li {
+    margin:5px;
+    padding:5px 10px;
+  }
+}
