--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,6 +25,7 @@
               %li= link_to 'Guests', guests_path
               %li= link_to 'Invitations', invitations_path
               %li= link_to 'Attendees', attendees_path
+              %li= link_to 'Seating Chart', seating_chart_attendees_path
               %li= link_to 'Budget', budget_items_path
               %li= link_to 'Menu', meals_path
             -else
