--- a/app/views/attendees/index.html.haml
+++ b/app/views/attendees/index.html.haml
@@ -16,6 +16,7 @@
             %th Attendee
             %th Guest
             %th Meal
+            %th Table
             %th Note
         %tbody
           =render(@attendees)
