--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
         |
       Crayley: for officials
     = favicon_link_tag
-    = stylesheet_link_tag 'application'
+    = stylesheet_link_tag 'application', media: 'all'
 
     = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Great+Vibes'
     = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Montez'
